--- a/E_CommercePanel/E_CommercePanel.csproj
+++ b/E_CommercePanel/E_CommercePanel.csproj
@@ -106,6 +106,12 @@
     <Compile Include="Admin\FrmOrders.Designer.cs">
       <DependentUpon>FrmOrders.cs</DependentUpon>
     </Compile>
+    <Compile Include="Customer\FrmRegisterCustomer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Customer\FrmRegisterCustomer.Designer.cs">
+      <DependentUpon>FrmRegisterCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sqlConnection.cs" />
@@ -114,6 +120,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Customer\FrmOrderHistory.resx">
       <DependentUpon>FrmOrderHistory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Customer\FrmRegisterCustomer.resx">
+      <DependentUpon>FrmRegisterCustomer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmAdminLogin.resx">
       <DependentUpon>FrmAdminLogin.cs</DependentUpon>
