--- a/E_CommercePanel/E_CommercePanel.csproj
+++ b/E_CommercePanel/E_CommercePanel.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Customer\FrmDiscounts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Customer\FrmDiscounts.Designer.cs">
+      <DependentUpon>FrmDiscounts.cs</DependentUpon>
+    </Compile>
     <Compile Include="Customer\FrmEditOwnInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,6 +121,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sqlConnection.cs" />
+    <EmbeddedResource Include="Customer\FrmDiscounts.resx">
+      <DependentUpon>FrmDiscounts.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Customer\FrmEditOwnInfo.resx">
       <DependentUpon>FrmEditOwnInfo.cs</DependentUpon>
     </EmbeddedResource>
