--- a/E_CommercePanel/E_CommercePanel.csproj
+++ b/E_CommercePanel/E_CommercePanel.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin\FrmReviews.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Admin\FrmReviews.Designer.cs">
+      <DependentUpon>FrmReviews.cs</DependentUpon>
+    </Compile>
     <Compile Include="Customer\FrmDiscounts.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +139,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sqlConnection.cs" />
+    <EmbeddedResource Include="Admin\FrmReviews.resx">
+      <DependentUpon>FrmReviews.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Customer\FrmDiscounts.resx">
       <DependentUpon>FrmDiscounts.cs</DependentUpon>
     </EmbeddedResource>
